Post-session bugfixes and optimization
* Fixed all sorts of weird issues related to the Character Sheet's
  Skills container in Firefox, largely stemming from unnecessary
  flex item styling that could just as easily be handled by block
  elements.
  * This, among other things, prevented columns from behaving properly,
    breaking into more-than-two columns, which overflowed out of the
    container rather than scrolling, sometimes rendering Skills entirely
    invisible.
* Entirely removed the largely-legacy Skill list EDie buttons.
* Fixed a bug in the Character datamodel that improperly nested an OR
  comparison, preventing correctly executing the data migration checks,
  which in turn messed up handling of on-sheet eDie changes.
* Added an event suppressor on Charactersheet edie blocks for 'change'
  events, preferring instead 'keyup' events.
* Fixed an incorrect holdover reference to `this.eDieSpent` that needed
  to be updated to `skill.system.eDieSpent` within the Character sheet.
* Made several improvements to the observer that handles scaling the
  System Shock icons.
  * Optimized flow to fetch certain data only once.
  * Correctly accounted for all element gaps in the footer, including
    the one before the System Shock container itself.
  * Assigned the observer directly to the footer, rather than as part
    of a querySelectorAll().forEach() pattern (used previously when
    scaling each icon individually).
  * Removed the requestAnimationFrame(), since we no longer need to
    worry about scaling the icons affecting the scaling of the observed
    parent (which is now the relatively static footer).
* Fixed incorrect localization references for strings relating to
  ammo on the Weapon Sheet.

--- a/styles/tribe8.css
+++ b/styles/tribe8.css
@@ -872,21 +872,14 @@ div.dice-roll .dice-formula.unskilled {
 
 	/* Skills */
 	.skills-list-container {
-		flex: 1 1 0;
-		min-height: 0;
-		display: flex;
-		flex-flow: column;
-		overflow: clip auto;
+		display: block;
+		overflow: hidden auto;
+		min-height: auto;
 	}
 	.skills-list {
-		flex: 1 1 0;
-		min-height: 0;
+		display: block;
 		column-count: 2;
 		gap: var(--gap-standard);
-		/*
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		*/
 	}
 	.skill {
 		display: grid;
@@ -959,20 +952,6 @@ div.dice-roll .dice-formula.unskilled {
 		height: 100%;
 		line-height: unset;
 	}
-	.skills-list .skill .edie-block .edie-buttons {
-		height: calc(100% - 2px);
-		overflow: hidden;
-		display: grid;
-		grid-template-rows: 1fr 1fr;
-	}
-	.skills-list .skill .edie-block .edie-buttons button {
-		min-height: unset;
-		height: unset;
-		width: unset;
-		min-width: unset;
-		overflow: hidden;
-		margin: 0;
-	}
 	.skills-list .specializations {
 		display: flex;
 		flex: 2 0 6rem;
@@ -1010,31 +989,6 @@ div.dice-roll .dice-formula.unskilled {
 		border-radius: 0 0 0.5rem 0.5rem;
 		resize: none;
 		flex: 1 0 1rem;
-	}
-	.skills-list .buttons {
-		position: absolute;
-		display: flex;
-		flex-flow: row;
-		height: 1.7rem;
-		padding: 0.2rem;
-		top: 2.6rem;
-		box-sizing: border-box;
-		gap: 0.2rem;
-	}
-	.skills-list .buttons button {
-		height: 1.3rem;
-		width: 1.3rem;
-		padding: 0.1rem;
-		align-items: center;
-		box-sizing: border-box;
-		min-height: unset;
-	}
-	.skills-list .buttons button i {
-		height: 100%;
-	}
-	.skills-list button {
-		margin-left: 25%;
-		justify-items: center;
 	}
 
 	/* Abilities */
@@ -1245,6 +1199,13 @@ div.dice-roll .dice-formula.unskilled {
 		/* width: 100%; */
 		flex: 0 0 fit-content;
 		justify-content: center;
+		/**
+		 * Footer is 0.5rem, header of System Shock is 1.5rem,
+		 * including margins, borders are 1px on each side, and we
+		 * don't want to entirely fill the space, so shrink the
+		 * computation to ~75%
+		 */
+		font-size: calc((3.5rem - 2px) * 0.75);
 	}
 	.shock-state {
 		display: inline-flex;
@@ -1254,7 +1215,8 @@ div.dice-roll .dice-formula.unskilled {
 		border: 1px solid var(--color-shock-state-border);
 		height: 100%;
 		max-width: fit-content;
-		/* This is an interesting hack to make gradient borders work without
+		/**
+		 * This is an interesting hack to make gradient borders work without
 		 * nested elements. Ultimately decided not to use it for now, but
 		 * keeping it here if I want it again later.
 		 */
@@ -1408,6 +1370,7 @@ div.dice-roll .dice-formula.unskilled {
 		position: relative;
 		margin: var(--gap-standard) 0;
 		box-sizing: content-box;
+		flex: 0 0 1.5rem;
 	}
 	.equipment .load-slider>div {
 		position: relative;
